Se realizo el capitulo 9.1

--- a/09.1.- Web Scraping.ipynb
+++ b/09.1.- Web Scraping.ipynb
@@ -52,11 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "fdefd855-2542-4103-b377-497df841d60a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from selenium import webdriver\n",
+    "driver = webdriver.Chrome()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -68,11 +71,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "1e1cec69-a6f3-4100-aa13-fceb78b62c8f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from bs4 import BeautifulSoup"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -84,11 +89,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "03da2252-f3c4-42d9-ab86-561744346d97",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No se encontró el elemento\n"
+     ]
+    }
+   ],
+   "source": [
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "\n",
+    "driver.get(\"https://vplaces.com\")\n",
+    "\n",
+    "try:\n",
+    "    elemento = WebDriverWait(driver, 10).until(\n",
+    "        EC.presence_of_element_located((By.ID, \"mi_id_de_ejemplo\"))\n",
+    "    )\n",
+    "    print(elemento.text)\n",
+    "except:\n",
+    "    print(\"No se encontró el elemento\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,22 +127,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de6f69e5-d9a8-4298-a27e-54800bd3c0bf",
-   "metadata": {},
-   "source": [
-    "Ok, ahora configura webdriver para usar Chrome por default, localiza tu chromedriver y usalo en este comando"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc07c1fe-877d-487b-8620-201619c334a4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "6aea0c37-f62b-4e5a-9437-2fcdecb94c53",
    "metadata": {},
    "source": [
@@ -124,19 +135,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "1cf22a0d-ba5e-4acd-a71e-d500101b749e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from selenium.webdriver.common.by import By"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "5cddab97-e26e-4186-a774-89c79f3ba5e1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "options = webdriver.ChromeOptions()\n",
+    "options.add_argument(\"--proxy-server=http://192.168.0.100:8080\")\n",
+    "options.add_experimental_option(\"prefs\", {\n",
+    "    \"profile.default_content_setting_values.geolocation\": 1\n",
+    "})"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -148,12 +169,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "2e9e13b8-35da-485d-b0be-b4916778829e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver.get(\"https://www.inmuebles24.com/terrenos-en-venta-en-fraccionamiento-bugambilias.html\")"
+    "driver.get(\"http://www.mineduc.cl/temas-educacion/formacion-continua/index.html\")"
    ]
   },
   {
@@ -174,19 +195,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "100cc676-8746-4af9-ba49-9deaae8ac314",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "contenido_html = driver.page_source"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "2ceafce6-32b7-4485-bd3b-c74afb7c6ef1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "soup = BeautifulSoup(contenido_html, \"html.parser\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -198,19 +225,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "7336ebbb-74e1-480b-975e-32aced23d286",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "contenido_html = driver.page_source"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "b503592c-2589-4017-8dd3-206c3c64c4b4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "soup = BeautifulSoup(contenido_html, \"html.parser\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -222,47 +255,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "c9f36965-a9f8-46d3-a0ec-c69966a079f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "        "
+    "titulos = []\n",
+    "enlaces = []       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "d45d2e5a-ab58-4dbd-bab3-e9a2766aa7f9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for elemento in soup.find_all(\"a\"):\n",
+    "    titulo = elemento.get_text(strip=True)\n",
+    "    enlace = elemento.get(\"href\", \"\")\n",
+    "    titulos.append(titulo)\n",
+    "    enlaces.append(enlace)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "f1333e75-480c-4511-aa70-9a94b601c59d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Primeros 5 títulos: ['MENU', 'Inicio', 'Ministerio►', 'Ministerio', 'Ministro de Educación']\n",
+      "Primeros 5 enlaces: ['#', 'https://www.mineduc.cl', '#', 'https://www.mineduc.cl/ministerio/', 'https://www.mineduc.cl/ministerio/ministro-de-educacion/']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Primeros 5 títulos:\", titulos[:5])\n",
+    "print(\"Primeros 5 enlaces:\", enlaces[:5])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "e76f7233-c962-488c-bfcd-fcced531d220",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Titulo</th>\n",
+       "      <th>Enlace</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MENU</td>\n",
+       "      <td>#</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Inicio</td>\n",
+       "      <td>https://www.mineduc.cl</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ministerio►</td>\n",
+       "      <td>#</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ministerio</td>\n",
+       "      <td>https://www.mineduc.cl/ministerio/</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Ministro de Educación</td>\n",
+       "      <td>https://www.mineduc.cl/ministerio/ministro-de-...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Titulo                                             Enlace\n",
+       "0                   MENU                                                  #\n",
+       "1                 Inicio                             https://www.mineduc.cl\n",
+       "2            Ministerio►                                                  #\n",
+       "3             Ministerio                 https://www.mineduc.cl/ministerio/\n",
+       "4  Ministro de Educación  https://www.mineduc.cl/ministerio/ministro-de-..."
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    \"Titulo\": titulos,\n",
+    "    \"Enlace\": enlaces\n",
+    "})\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "afbd0914-7031-4bff-a041-c74272d20cdb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Datos guardados en 'scraping_resultados.csv'\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.to_csv(\"scraping_resultados.csv\", index=False)\n",
+    "print(\"Datos guardados en 'scraping_resultados.csv'\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -274,19 +412,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "bd68a15a-9db7-4712-b303-a421f8709678",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precios encontrados: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_precios = []\n",
+    "\n",
+    "for elemento in soup.find_all(\"span\", class_=\"precio\"):\n",
+    "    precio_texto = elemento.get_text(strip=True)\n",
+    "    precio_valor = float(precio_texto.replace(\"$\", \"\").replace(\",\", \"\"))\n",
+    "    lista_precios.append(precio_valor)\n",
+    "\n",
+    "print(\"Precios encontrados:\", lista_precios)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "d8431595-c04e-4399-ab4d-e00263095400",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precios filtrados (< $50): []\n"
+     ]
+    }
+   ],
+   "source": [
+    "precios_filtrados = []\n",
+    "\n",
+    "for precio in lista_precios:\n",
+    "    if precio < 50:  # Ajusta el valor según el criterio de filtrado\n",
+    "        precios_filtrados.append(precio)\n",
+    "\n",
+    "print(\"Precios filtrados (< $50):\", precios_filtrados)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -298,19 +469,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "cfd1c8ec-655e-493a-8a02-da3a3ce12d8b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ubicaciones encontradas: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_ubicaciones = []\n",
+    "\n",
+    "for elemento in soup.find_all(\"span\", class_=\"ubicacion\"):\n",
+    "    ubicacion_texto = elemento.get_text(strip=True)\n",
+    "    lista_ubicaciones.append(ubicacion_texto)\n",
+    "\n",
+    "print(\"Ubicaciones encontradas:\", lista_ubicaciones)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "cb6f049a-4e02-4066-90f3-07952b0b3441",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ubicaciones filtradas (contienen 'Santiago'): []\n"
+     ]
+    }
+   ],
+   "source": [
+    "ubicaciones_filtradas = []\n",
+    "\n",
+    "for ubicacion in lista_ubicaciones:\n",
+    "    if \"Santiago\" in ubicacion:\n",
+    "        ubicaciones_filtradas.append(ubicacion)\n",
+    "\n",
+    "print(\"Ubicaciones filtradas (contienen 'Santiago'):\", ubicaciones_filtradas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -322,20 +525,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "702b5bb0-7e61-43de-91cd-165bb14fa285",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n2 original: ['   12.5 ', '  $15,00 ', '20,30 ', ' $  7.90']\n",
+      "n2 limpio: [12.5, 1500.0, 2030.0, 7.9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n2 = [\"   12.5 \", \"  $15,00 \", \"20,30 \", \" $  7.90\"]\n",
+    "\n",
+    "n2_limpio = []\n",
+    "\n",
+    "for elemento in n2:\n",
+    "    temp = elemento.strip()\n",
+    "    temp = temp.replace(\"$\", \"\").replace(\",\", \"\")\n",
+    "    valor = float(temp)\n",
+    "    n2_limpio.append(valor)\n",
+    "\n",
+    "print(\"n2 original:\", n2)\n",
+    "print(\"n2 limpio:\", n2_limpio)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "4f25c639-fa24-470f-9957-8de8a3bd7153",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valores mayores a 10: [12.5, 1500.0, 2030.0]\n"
+     ]
+    }
+   ],
    "source": [
-    "m2"
+    "n2_filtrado = []\n",
+    "\n",
+    "for valor in n2_limpio:\n",
+    "    if valor > 10:\n",
+    "        n2_filtrado.append(valor)\n",
+    "\n",
+    "print(\"Valores mayores a 10:\", n2_filtrado)"
    ]
   },
   {
@@ -356,19 +595,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "af5a6677-24ad-47e6-808b-f8ca9c878d76",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ubicaciones</th>\n",
+       "      <th>Precios</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Ubicaciones, Precios]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df_datos = pd.DataFrame({\n",
+    "    \"Ubicaciones\": lista_ubicaciones,\n",
+    "    \"Precios\": lista_precios\n",
+    "})\n",
+    "df_datos.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "dc17fdda-3e34-4254-9c8a-e14988d97341",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Datos guardados en 'datos_scraping.csv'\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_datos.to_csv(\"datos_scraping.csv\", index=False)\n",
+    "print(\"Datos guardados en 'datos_scraping.csv'\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -380,11 +679,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "86dba992-5383-4ba2-b80b-24ce81c5d4d1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "df_datos.to_csv(\"datos_scraping.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
@@ -403,7 +705,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
