Se realizo el capitulo 10 y 10.1

--- a/10.- Programación Orientada a Objetos.ipynb
+++ b/10.- Programación Orientada a Objetos.ipynb
@@ -868,11 +868,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f1739209-3b9b-4925-af9b-f6e21edba7da",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Personal:\n",
+    "    def __init__(self, nombre, profesion, cargo):\n",
+    "        self.nombre = nombre\n",
+    "        self.profesion = profesion\n",
+    "        self.cargo = cargo\n",
+    "\n",
+    "    def detalle(self):\n",
+    "        return f\"{self.nombre} es un {self.profesion} y tiene el cargo de {self.cargo}\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -884,19 +893,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0f3169aa-444b-461c-a9aa-fd49057ab977",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class pers_nuevo(Personal):\n",
+    "    pass\n",
+    "\n",
+    "class pers_advo(Personal):\n",
+    "    pass"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b6b26076-a069-4482-9cba-afe5391121f3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eva es un Contadora y tiene el cargo de Auxiliar\n",
+      "Luis es un Abogado y tiene el cargo de Asesor legal\n"
+     ]
+    }
+   ],
+   "source": [
+    "empleado1 = pers_nuevo(\"Eva\", \"Contadora\", \"Auxiliar\")\n",
+    "empleado2 = pers_advo(\"Luis\", \"Abogado\", \"Asesor legal\")\n",
+    "\n",
+    "print(empleado1.detalle())\n",
+    "print(empleado2.detalle())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -908,43 +938,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9a266767-0657-4df4-bf7b-efd69f7e2e7f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class pers_nuevo(Personal):\n",
+    "    def __init__(self, nombre, profesion, cargo):\n",
+    "        super().__init__(nombre, profesion, cargo)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e5431849-de13-41b6-9e3e-2531b583d349",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nuevo_ingreso = pers_nuevo(\"Carlos\", \"Ingeniero\", \"Técnico\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f0263048-5a5e-4f5e-a0fa-16591c391870",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Carlos\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nuevo_ingreso.nombre)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4828a9bf-e9cb-4441-a432-3df9f917698a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingeniero\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nuevo_ingreso.profesion)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6e1cb384-ffad-4ff9-9e79-596a85195000",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Carlos es un Ingeniero y tiene el cargo de Técnico\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nuevo_ingreso.detalle())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -956,11 +1022,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6c518aba-c175-4ba7-bcb9-5b097b75c048",
+   "execution_count": 12,
+   "id": "7db105c4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ingeniero = pers_nuevo(\"Carlos\", \"Ingeniero\", \"Jefe de área\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6c518aba-c175-4ba7-bcb9-5b097b75c048",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Carlos, Ingeniero, Jefe de área\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{ingeniero.nombre}, {ingeniero.profesion}, {ingeniero.cargo}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -976,11 +1062,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6bb17119-9db9-4286-89a6-91e60ba6c89a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from decimal import Decimal\n",
+    "\n",
+    "class Cuenta:\n",
+    "    def __init__(self, nombre, ahorro):\n",
+    "        self.nombre = nombre\n",
+    "        self.ahorro = ahorro\n",
+    "\n",
+    "cuenta = Cuenta(\"Yael\", Decimal('300.00'))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -992,11 +1087,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "b15db194-47a6-46d1-9292-2128372f367c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Ahorro(Cuenta):\n",
+    "    def mostrar(self):\n",
+    "        return f\"{self.nombre} tiene ahora en su cuenta {self.ahorro}\"\n",
+    "\n",
+    "class Gasto(Cuenta):\n",
+    "    pass"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1008,11 +1110,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "244cbf00-764d-410f-bca8-b47b0dd84bb5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Gasto(Cuenta):\n",
+    "    def retirar(self, cantidad):\n",
+    "        if cantidad <= self.ahorro:\n",
+    "            self.ahorro -= cantidad\n",
+    "            return f\"{self.nombre} tiene ahora en su cuenta {self.ahorro}\"\n",
+    "        else:\n",
+    "            return f\"No puedes retirar {cantidad}, saldo insuficiente\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1024,59 +1134,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "29f95292-2f33-46df-a114-6ab3e01b2d17",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from decimal import Decimal"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "9c30f409-dcbc-4e9e-a9bb-2ccc88b81ee6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Cuenta:\n",
+    "    def __init__(self, nombre, ahorro):\n",
+    "        self.nombre = nombre\n",
+    "        self.ahorro = ahorro"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "b959fb15-4e9a-4eab-97b7-a8469e2978a9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Ahorro(Cuenta):\n",
+    "    def guardar(self):\n",
+    "        return f\"{self.nombre} tiene ahora en su cuenta {self.ahorro}\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "44914d74-d0a5-45ac-a578-06801c764ca2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Gasto(Cuenta):\n",
+    "    def retirar(self, cantidad):\n",
+    "        if cantidad <= self.ahorro:\n",
+    "            self.ahorro -= cantidad\n",
+    "            return f\"{self.nombre} tiene ahora en su cuenta {self.ahorro}\"\n",
+    "        else:\n",
+    "            return f\"No puedes retirar {cantidad}, saldo insuficiente\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "2c50caaf-af21-47a8-bc02-babac15b6489",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cuenta1 = Ahorro(\"Luis\", Decimal('5000.00'))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "d067d7e7-7601-4514-9e62-eb4c5d17cbd1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cuenta2 = Gasto(\"Eva\", Decimal('3000.00'))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "921757e9-e3a6-4ec5-baf7-f5b1a24e1d21",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Luis tiene ahora en su cuenta 5000.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cuenta1.guardar())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1084,6 +1227,24 @@
    "metadata": {},
    "source": [
     "Ahora el usuario retira 5000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "fa6ffc24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No puedes retirar 5000.00, saldo insuficiente\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cuenta2.retirar(Decimal('5000.00')))"
    ]
   },
   {
@@ -1096,27 +1257,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "14156792-cd44-44e7-a721-fd58409b660b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Sucursal:\n",
+    "    sucursales = []\n",
+    "\n",
+    "    def __init__(self, nombre):\n",
+    "        self.nombre = nombre\n",
+    "        Sucursal.sucursales.append(nombre)\n",
+    "\n",
+    "    @classmethod\n",
+    "    def mostrar_sucursales(cls):\n",
+    "        return cls.sucursales"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "4ecb4225-71f2-46c5-b968-1eccdc65c0a3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s1 = Sucursal(\"Sucursal Norte\")\n",
+    "s2 = Sucursal(\"Sucursal Sur\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "7b0a2d27-a716-4856-a3a8-5a8ba7530ccd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Sucursal Norte', 'Sucursal Sur']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Sucursal.mostrar_sucursales())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1136,27 +1321,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "702162f3-270e-4325-95b5-be52d5287e79",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Matematicas:\n",
+    "    def creditos(self):\n",
+    "        return 6\n",
+    "\n",
+    "class Idioma:\n",
+    "    def creditos(self):\n",
+    "        return 4"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "d0211e1f-9348-4050-bd20-702632dbbcdc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "curso1 = Matematicas()\n",
+    "curso2 = Idioma()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "e83b3434-8349-476e-ab3f-90747fedf12a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Este curso tiene 6 créditos\n",
+      "Este curso tiene 4 créditos\n"
+     ]
+    }
+   ],
+   "source": [
+    "for curso in (curso1, curso2):\n",
+    "    print(f\"Este curso tiene {curso.creditos()} créditos\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1168,51 +1376,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "769cd57b-cf15-4f19-b84c-3e7e2935ddc0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Matematicas:\n",
+    "    def creditos(self):\n",
+    "        return 6"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "4f942729-11dd-4c10-aadd-235931410d34",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Idioma:\n",
+    "    def creditos(self):\n",
+    "        return 4"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "51aeb6af-d25d-4a16-9e5d-181d29c78060",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "asignatura = Matematicas()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "3cefcd6f-49bf-45c9-8255-d7d89a4fe6c0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '__main__.Matematicas'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(asignatura))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "fe549c76-150c-454f-b3a1-03c84185da7b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(isinstance(asignatura, Matematicas))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "ba2bf792-33f3-4e4b-8ad5-512b85243009",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Esta materia tiene 6 créditos\n",
+      "Esta materia tiene 4 créditos\n"
+     ]
+    }
+   ],
+   "source": [
+    "for materia in [Matematicas(), Idioma()]:\n",
+    "    print(f\"Esta materia tiene {materia.creditos()} créditos\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1226,11 +1476,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "735a8f76-6408-4f4e-a568-6c200491652b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Peso mexicano\n",
+      "Dólar estadounidense\n",
+      "Yen japonés\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Mexico:\n",
+    "    def moneda(self):\n",
+    "        return \"Peso mexicano\"\n",
+    "\n",
+    "class USA:\n",
+    "    def moneda(self):\n",
+    "        return \"Dólar estadounidense\"\n",
+    "\n",
+    "class Japon:\n",
+    "    def moneda(self):\n",
+    "        return \"Yen japonés\"\n",
+    "\n",
+    "# Uso del polimorfismo\n",
+    "for pais in [Mexico(), USA(), Japon()]:\n",
+    "    print(pais.moneda())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1242,43 +1518,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "41ec3fdb-6519-438d-929d-627f4e53dc98",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mex = Mexico()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "1b917be9-5072-4cc9-b679-c89dd939ebe4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "usa = USA()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "e1a437cc-3811-429a-808b-80f951b3e596",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "jpn = Japon()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "5048a16c-3a9f-4fa1-bacf-d75b17e1839d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Peso mexicano\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mex.moneda())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "7d6293ad-ad7d-4437-b281-b7d170b78961",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Peso mexicano\n",
+      "Dólar estadounidense\n",
+      "Yen japonés\n"
+     ]
+    }
+   ],
+   "source": [
+    "for pais in [mex, usa, jpn]:\n",
+    "    print(pais.moneda())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1286,6 +1591,37 @@
    "metadata": {},
    "source": [
     "Y checa la moneda de nicaragua"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "ec13d59f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Nicaragua:\n",
+    "    def moneda(self):\n",
+    "        return \"Córdoba nicaragüense\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "2b0883fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Córdoba nicaragüense\n"
+     ]
+    }
+   ],
+   "source": [
+    "nic = Nicaragua()\n",
+    "print(nic.moneda())"
    ]
   }
  ],
